--- a/src/app/emprendimientos/emprendimientos.component.html
+++ b/src/app/emprendimientos/emprendimientos.component.html
@@ -1,4 +1,4 @@
-<!-- inicio seccion -->
+ <!-- inicio seccion -->
 <section class="section-e grybg py-5">
   <div class="container">
     <div class="titulo-emprendimientos" >
@@ -10,8 +10,7 @@
           <div class="col-lg-4">
               <div class="emprendimientos">
                 <div class="team-image">
-                  <a href="" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;"
-                     src="assets/img/gastronomia.PNG" alt=""></a>
+                  <a href="gastronomia" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;" src="assets/img/gastronomia.PNG" alt=""></a>
 
                 </div>
                   <div class="texto-emprendimientos" >
@@ -52,7 +51,7 @@
         <div class="col-lg-4" style="padding-top: 10%;">
           <div class="emprendimientos">
               <div class="team-image">
-                <a href="" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;" src="assets/img/medio.PNG" alt=""></a>
+                <a href="medio" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;" src="assets/img/medio.PNG" alt=""></a>
 
               </div>
               <div class="texto-emprendimientos" >
@@ -65,7 +64,7 @@
       <div class="col-lg-4" style="padding-top: 10%;">
           <div class="emprendimientos">
               <div class="team-image">
-                <a href="" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;" src="assets/img/artesanias.PNG" alt=""></a>
+                <a href="artesania" >   <img class="img-emprendimiento" style="width: 233px; height: 233px;" src="assets/img/artesanias.PNG" alt=""></a>
 
               </div>
               <div class="texto-emprendimientos" style=" margin-left: 40px;">
