--- a/src/app/emprendimientos/social/social.component.html
+++ b/src/app/emprendimientos/social/social.component.html
@@ -26,12 +26,14 @@
             <div class="col-lg-4">
               <div class="emprendimientos">
                   <div class="team-image">
-                    <a href="" >   <img class="img-emprendimiento" src="assets/img/otra.PNG" alt=""></a>
+                    <a href="softwow" >   <img class="img-emprendimiento" style="border-radius: 50%;" src="assets/img/softwow.png" alt=""></a>
 
                   </div>
-                  <div class="texto-emprendimientos" style=" margin-left: 50px;" >
+                  <br>
+                  <div class="texto-emprendimientos" style=" margin-left: 30px;" >
                     <h4>
-                      Fundación 2</h4>
+                      Softwow
+                    </h4>
 
                   </div>
               </div>
