--- a/src/app/my-footer/my-footer.component.html
+++ b/src/app/my-footer/my-footer.component.html
@@ -25,7 +25,7 @@
 
                   <div class="col-lg-4">
                     <div class="footer-widget cont ">
-                      <img src="assets/img/innova-logo2.png">
+                      <img src="assets/img/Logo-innova-ajuste.png">
                     </div>
                   </div>
 
