--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -1,25 +1,60 @@
  <!--menu-->
- <nav class="navbar navbar-expand-lg navbar-light main-header sticky-top">
-  <div class="container">
+ 
+ <div align="center" class="container">
+  <a    href="#">
+     
+    <img style="width: 30%;" class="logo-innova "src="assets/img/Logo-innova-ajuste.png" alt=""  > 
+</a>
+ </div>
+ 
+ 
+ 
 
-      <a class="navbar-brand" href="#">
-          <img class="logo-innova "src="assets/img/innova-logo2.png" alt="">
-      </a>
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+<div class="pos-f-t">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-light p-2">
+       <div align="center" style="margin-left: 18%;">
+            <ul class="navbar-nav ml-auto primary-menu">
+              <div class="container">
+              <div class="row">
+              <div class=" col-lg-4" ><li class="bi bi-house"><a align="center" href="#">Inicio</a> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+              </svg></li></div><br>
+               <div class=" col-lg-4"><li class="bi bi-house"><a align="center" href="actualidad">Actualidad</a><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+              </svg></li></div><br>
+               <div class=" col-lg-4"> <li><a align="center" href="servicios">Servicios</a><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+              </svg></li></div>
+              </div>
+              </div>
+            </ul>
+          </div>
+         </div>
+    </div>
+    <nav class="navbar navbar-light bg-light">
+      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <ul class="navbar-nav ml-auto primary-menu">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="actualidad">Actualidad</a></li>
-              <li><a href="servicios">Servicios</a></li>
-          </ul>
 
-        </div>
+
+    
+    
+    
+  
+    
+    
+    
+    
+    
+    
+
+
+    </nav>
   </div>
-</nav>
 <!--menu fin-->
 <router-outlet></router-outlet>
