--- a/src/app/emprendimientos/artesania/artesania.component.css
+++ b/src/app/emprendimientos/artesania/artesania.component.css
@@ -34,7 +34,9 @@
       -webkit-box-shadow: 0px 0px 8px 8px #1ea0ec;
     }
   
-  
+    .img-emprendimiento{
+      width: 70%;
+    }
   
     .cuadroredes{
       width:46px;
