--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -12,7 +12,7 @@
 
 <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-dark p-2">
+      <div style="background: #c5c4c1" >
        <div align="center" style="margin-left: 18%;">
             <ul class="navbar-nav ml-auto primary-menu">
               <div class="container">
@@ -34,8 +34,8 @@
           </div>
          </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
-      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-dark " style="background: #c5c4c1">
+      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" style="background: #f02929">
         <span class="navbar-toggler-icon"></span>
       </button>
 
