--- a/src/app/emprendimientos/artesania/artesania.component.html
+++ b/src/app/emprendimientos/artesania/artesania.component.html
@@ -1,7 +1,14 @@
 <app-my-nav></app-my-nav>
 
 <!-- inicio seccion -->
+
 <section class="section-s grybg py-2" >
+    <div style="padding: 7px;">
+        <a href="emprendimientos"><i class="fas fa-arrow-alt-circle-left atras"></i> </a>
+        <h2 class="tex">atrás</h2>
+    </div>
+
+
   <div class="container" style="padding-top: 85px;">
     <div class="titulo-emprendimientos" >
       <h1>
