--- a/src/app/emprendimientos/gastronomia/kfrut/kfrut.component.html
+++ b/src/app/emprendimientos/gastronomia/kfrut/kfrut.component.html
@@ -3,7 +3,7 @@
 <!--  seccion seleccionado -->
 <section class="section-s grybg py-2" >
   <div style="padding: 7px;">
-    <a href="medio"><i class="fas fa-arrow-alt-circle-left atras"></i> </a>
+    <a href="gastronomia"><i class="fas fa-arrow-alt-circle-left atras"></i> </a>
     <h2 class="tex">atrás</h2>
 </div>
 
