--- a/src/app/actualidad/actualidad.component.css
+++ b/src/app/actualidad/actualidad.component.css
@@ -1,12 +1,12 @@
 .container{
  justify-content: center;
- height:600px;
+ min-height:600px;
 }
 
 .mat-card{
   margin-left: 15%;
   width: 800px;
-  background: #D9D9D9;
+  background: #7cc2e2;
 }
 
 .mat-card h1{
@@ -19,6 +19,10 @@
   /* width:100%; */
   /* height: 100%; */
   align-items: center;
+}
+
+#fecha{
+color: aliceblue;
 }
 
 .row{
